# AI

./: README.md  collegeMajor.jsonl  pyproject.toml  requirements.txt  test.txt  typesense.ipynb
